# advent-of-code

./: .editorconfig  .gitignore  README.md  deno.json  package.json  pnpm-lock.yaml
deno/: README.md
deno/src/: main.ts
deno/src/2025/1/: main.ts
deno/src/2025/4/: main.ts
deno/src/2025/7/: main.ts
deno/src/2025/8/: main.ts
rust/: Cargo.toml  README.md
rust/src/: main.rs  setup_day.rs  util.rs  visualize.rs  visualize_runner.rs
rust/src/2025/: mod.rs
rust/src/2025/1/: mod.rs
rust/src/2025/2/: mod.rs
rust/src/2025/3/: mod.rs
rust/src/2025/4/: mod.rs
rust/src/2025/5/: mod.rs
rust/src/2025/6/: mod.rs
rust/src/2025/7/: mod.rs
rust/src/2025/8/: mod.rs
rust/src/2025/9/: mod.rs  visualize.rs
rust/src/2025/9/static/: app.js  index.html  style.css
rust/static/: app.js  index.html  style.css
scripts/: setup-day.ts
src/: main.ts  setup-day.ts  util.ts
src/2025/1/: main.ts
src/2025/2/: main.ts
src/2025/3/: main.ts
src/2025/4/: main.ts
src/2025/5/: main.ts
src/2025/6/: main.ts
src/2025/8/: main.ts
src/4/: main.ts
